tests/e2e/negative/n0011_missing_match_return.cryo
// @test: missing_match_return
// @expect: compile_fail
// @mode: raw
// @error_code: E0403
// @description: Match that does not cover all paths in a non-void function should fail
// @tags: match, return, errors

namespace NegMissingMatchReturn;

enum Shape {
    Circle;
    Square;
    Triangle;
}

function area(s: Shape) -> int {
    match (s) {
        Shape::Circle => { return 314; }
        Shape::Square => { return 100; }
    }
}

function main() -> int {
    const result: int = area(Shape::Circle);
    return 0;
}
